--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 		<section class="intro">
 			<header>
 				<h1><span class="image main"><img src="images/logo.webp" alt="" /></span> </h1>
-				<h3 style="color: #fff;">- Nutrição Integrativa - <br> Aconselhamento Nutricional com foco na SAÚDE Da Mulher
+				<h3 style="color: #fff;">- Nutrição Integrativa - <br> Aconselhamento Nutricional com foco na SAÚDE Da
+					Mulher
 					<br>
-					 <br>
+					<br>
 					<i>CRN-11 17913</i>
 				</h3>
 				<br>
@@ -39,7 +40,8 @@
 						<li><a target="_self" rel="noopener noreferrer"
 								href="https://wa.me/558597215840?text=Olá, Júlia! Quero agendar minha consulta com você."
 								class="button primary large scrolly">Agende aqui</a>
-						<li><a href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber mais sobre a consulta com você" class="button large scrolly">Saiba mais</a></li>
+						<li><a href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber mais sobre a consulta com você"
+								class="button large scrolly">Saiba mais</a></li>
 					</ul>
 				</div>
 				<!--<ul class="actions">
@@ -66,7 +68,7 @@
 				<p><strong>
 						• Avaliação metabólica </strong> através da leitura e da interpretação de exames de sangue<br>
 					• <strong> Orientação de alimentação</strong> e de rotina direcionada para mulheres e para<strong>
-						pessoas vegetarianas\veganas </strong>(ou em transição) <br> 
+						pessoas vegetarianas\veganas </strong>(ou em transição) <br>
 
 					•<strong> Prescrição de suplementação </strong>(se necessária)<br>
 
@@ -135,7 +137,8 @@
 			</header>
 			<div class="content" id="integrativa">
 				A minha abordagem é o aconselhamento nutricional
-				"Um encontro entra duas pessoas para examinar com atenção, olhar com respeito e deliberar com prudência e
+				"Um encontro entra duas pessoas para examinar com atenção, olhar com respeito e deliberar com prudência
+				e
 				justeza sobre a alimentação de uma delas."
 
 				Se você procura uma <strong> abordagem personalizada, sensível e realista</strong>, que busca melhorar a
@@ -143,8 +146,8 @@
 				associados à má alimentação, então, <strong>o aconselhamento nutricional é para você.
 				</strong></p>
 				<p><strong> Acredito que a chave para uma
-					saúde vibrante está em entender e honrar as complexidades de cada pessoa.
-				</strong>
+						saúde vibrante está em entender e honrar as complexidades de cada pessoa.
+					</strong>
 				</p>
 
 
@@ -175,7 +178,7 @@
 				<!-- Section -->
 
 				<section>
-					<header> 
+					<header>
 
 						<p class="outra">Acredito na integração do conhecimento proveniente da natureza e da
 							ciência para promover um
@@ -201,7 +204,7 @@
 
 						</ul>
 					</div>
-					
+
 				</section>
 
 				<!--  -->
@@ -222,12 +225,12 @@
 				<section>
 					<header>
 						<h3></h3>
-						<p class="outra" >Se você está pronta para embarcar em uma jornada de saúde
+						<p class="outra">Se você está pronta para embarcar em uma jornada de saúde
 							transformadora, estou aqui para
 							auxiliar. Vamos nutrir seu corpo, mente e alma juntos, e celebrar cada passo em direção a
 							uma vida mais saudável e plena.</p>
 
-						
+
 					</header>
 					<!--<div class="content">
 						<div class="gallery">
@@ -275,39 +278,40 @@
 		</section>
 
 		<!-- Copyright -->
-	
 
 
-	<!-- Scripts -->
-	<script type="text/javascript">
-		(function (c, l, a, r, i, t, y) {
-			c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
-			t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
-			y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
-		})(window, document, "clarity", "script", "ngzlrz0ch6");
-	</script>
+
+		<!-- Scripts -->
+		<script type="text/javascript">
+			(function (c, l, a, r, i, t, y) {
+				c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+				t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+				y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+			})(window, document, "clarity", "script", "ngzlrz0ch6");
+		</script>
 
 
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16660286023">
-	</script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16660286023">
+		</script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() { dataLayer.push(arguments); }
+			gtag('js', new Date());
 
-		gtag('config', 'AW-16660286023');
-	</script>
+			gtag('config', 'AW-16660286023');
+		</script>
 
 
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-	<script type="module"
-		src="https://unpkg.com/@nocodeapi/embed-instagram-feed@latest/embed-instagram-feed.js?module"></script>
+		<script src="//cdn.jsdelivr.net/gh/opadim/script/cnl.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+		<script type="module"
+			src="https://unpkg.com/@nocodeapi/embed-instagram-feed@latest/embed-instagram-feed.js?module"></script>
 
 </body>
 
