--- a/home.html
+++ b/home.html
@@ -105,7 +105,7 @@
 
 				</ul>
 				-->
-				<p>Nao trabalho com dietas restritivas e quantitativas. Te conduzo para que você aprenda a fazer
+				<p>Não trabalho com dietas restritivas e quantitativas. Te conduzo para que você aprenda a fazer
 					escolhas mais saudáveis a longo prazo. </p>
 			</div>
 		</section>
@@ -224,7 +224,7 @@
 		<!-- Section -->
 		<section id="footer">
 			<header>
-				<h2 style="font-size: ;">
+				<h2 >
 					<ul class="items">
 
 
@@ -253,7 +253,7 @@
 				<section>
 					<header>
 
-						<p class="outra" style="font-size: ;">Recria tua vida, sempre, sempre. Remove pedras e planta
+						<p class="outra">Recria tua vida, sempre, sempre. Remove pedras e planta
 							roseiras e <br> faz doces. 
 							Recomeça.<br><br><i>- Cora Coralina</i></p>
 					</header>
