--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<br>
 					<div class="content">
 
-						<ul class="actions" style="justify-content: center;
+						<!--<ul class="actions" style="justify-content: center;
 					display: flex;">
 
 							<li><a href="#atendimento" class="button large scrolly">A consulta </a></li>
@@ -51,6 +51,7 @@
 							<li><a href="#valores" class="button large scrolly">Valores</a></li>
 
 						</ul>
+					-->
 						<ul class="actions" style="justify-content: center;
 								display: flex;">
 							<li>
@@ -71,6 +72,11 @@
 			</div>
 		</section>
 
+
+
+
+
+		
 		<section>
 			<header>
 				<h2>atendimento </h2>
