--- a/index.html
+++ b/index.html
@@ -194,13 +194,13 @@
 
 		</section>
 
-
+<!-- 
 		<section>
 			<header>
 				<h2>Investimento</h2>
 			</header>
 			<div class="content" id="valores">
-				<!-- Section -->
+				 Section 
 
 
 
@@ -213,7 +213,7 @@
 						<a href="#valores" class="landscape" onclick="return false;"><img src="images/valor2.png"
 								alt="" /></a>
 
-						<!--<a href="images/gallery/fulls/04.webp" class="landscape"><img src="images/gallery/thumbs/04.webp" alt="" /></a> -->
+						
 					</div>
 					<br>
 					<ul class="actions" style="justify-content: center;
@@ -229,10 +229,10 @@
 
 
 
-				<!--  -->
+				
 
 		</section>
-
+	-->
 
 
 
