--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 				<ul class="actions" style="justify-content: center;
 				display: flex;">
 					<li><a target="_self" rel="noopener noreferrer"
-							href="https://wa.me/558597215840?text=Olá, Júlia! Quero agendar minha consulta com você."
+							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber mais da sua consulta."
 							class="button primary large scrolly">saiba mais</a></li>
 
 				</ul>
