--- a/index.html
+++ b/index.html
@@ -172,14 +172,64 @@
 				<h2>Sobre mim</h2>
 			</header>
 			<div class="content">
-				<p>Vegana há 8 anos e dedicada ao estudo do <strong>Ayurveda </strong>(Terapeuta Ayurveda), do
-					<strong>Yoga</strong>, da
-					<strong> Nutrição Clínica Integrativa</strong> (pós graduada) e da Avaliação Metabólica (aluna do
+				<p>Vegana há 8 anos e dedicada ao estudo do Ayurveda (Terapeuta Ayurveda), do Yoga, da Nutrição Clínica
+					Integrativa (pós graduada) e da Avaliação Metabólica e Interpretação Avançada de Exames (aluna do
 					Dr. Eric Slywitch).
+					Passei a enxergar o mundo através da lente da comida quando me tornei vegetariana, foi um período de
+					transformação de hábitos - não apenas alimentares - na minha vida. A partir da minha vivência, me
+					convenci de que a saúde é um processo de autocura, o que não é possível sem autoconhecimento,
+					autocuidado e autonomia. Na contramão desse ideal, me dei conta de que muitas pessoas estavam
+					experienciando uma relação adoecida com a alimentação e com o próprio corpo, por isso resolvi cursar
+					Nutrição na Universidade de Fortaleza, uma das melhores do país, que têm o Programa Interdisciplinar
+					de Nutrição aos Transtornos Alimentares e Obesidade, no qual atendi pacientes por mais de um ano.
+					Apesar do trabalho com o comportamento alimentar ter sido uma das oportunidades mais enriquecedoras
+					na minha vida profissional, percebi que precisava beber de outras fontes para encontrar a minha
+					própria direção. Foi assim que, investindo na minha formação, hoje, me considero capaz de auxiliar
+					as pessoas de forma mais assertiva, integrando a visão que tenho do seu metabolismo, comportamento e
+					estilo de vida e individualizando condutas. O que quero dizer é que meu atendimento não é o mesmo
+					para todos porque cada pessoa me apresenta um caminho único a ser considerado e respeitado.</p>
 
 
 
 
+
+
+			</div>
+
+		</section>
+
+		<section id="sobre-mim">
+			<header>
+				<h2>Perguntas Frequentes</h2>
+			</header>
+			<div class="content">
+				<!-- HTML -->
+				<div class="faq">
+					<details>
+						<summary>A consulta é on-line?</summary>
+						<p>Sim, exclusivamente na modalidade de Telenutrição.</p>
+					</details>
+					<details>
+						<summary>Não sou vegetariana nem pretendo ser, você ainda pode me ajudar?</summary>
+						<p>Sim, posso te atender respeitando as suas decisões.</p>
+					</details>
+					<details>
+						<summary>Tenho um diagnóstico. Será que a Nutrição pode me ajudar?</summary>
+						<p>Independente do seu diagnóstico ou condição de saúde, o cuidado nutricional será um aliado
+							fundamental ao seu tratamento.</p>
+					</details>
+				</div>
+
+
+
+				<script>// JavaScript
+					const perguntas = document.querySelectorAll('.pergunta');
+
+					perguntas.forEach((pergunta) => {
+						pergunta.addEventListener('click', () => {
+							pergunta.classList.toggle('ativo');
+						});
+					});</script>
 
 
 			</div>
