--- a/index.html
+++ b/index.html
@@ -172,21 +172,21 @@
 				<h2>Sobre mim</h2>
 			</header>
 			<div class="content">
-				<p>Vegana há 8 anos e dedicada ao estudo do Ayurveda (Terapeuta Ayurveda), do Yoga, da Nutrição Clínica
-					Integrativa (pós graduada) e da Avaliação Metabólica e Interpretação Avançada de Exames (aluna do
-					Dr. Eric Slywitch).
+				<p>Vegana há 8 anos e dedicada ao estudo do <strong> Ayurveda (Terapeuta Ayurveda)</strong>, do <strong>Yoga</strong>, da <strong>Nutrição Clínica
+					Integrativa </strong> (pós graduada) e da <strong>Avaliação Metabólica e Interpretação Avançada de Exames</strong> (aluna do
+					Dr. Eric Slywitch). 
 					Passei a enxergar o mundo através da lente da comida quando me tornei vegetariana, foi um período de
 					transformação de hábitos - não apenas alimentares - na minha vida. A partir da minha vivência, me
 					convenci de que a saúde é um processo de autocura, o que não é possível sem autoconhecimento,
 					autocuidado e autonomia. Na contramão desse ideal, me dei conta de que muitas pessoas estavam
 					experienciando uma relação adoecida com a alimentação e com o próprio corpo, por isso resolvi cursar
-					Nutrição na Universidade de Fortaleza, uma das melhores do país, que têm o Programa Interdisciplinar
+					Nutrição na Universidade de Fortaleza, uma das melhores do país, que tem o Programa  Interdisciplinar
 					de Nutrição aos Transtornos Alimentares e Obesidade, no qual atendi pacientes por mais de um ano.
 					Apesar do trabalho com o comportamento alimentar ter sido uma das oportunidades mais enriquecedoras
 					na minha vida profissional, percebi que precisava beber de outras fontes para encontrar a minha
-					própria direção. Foi assim que, investindo na minha formação, hoje, me considero capaz de auxiliar
+					própria direção. Foi assim que, investindo na minha formação, hoje, sou capaz de auxiliar
 					as pessoas de forma mais assertiva, integrando a visão que tenho do seu metabolismo, comportamento e
-					estilo de vida e individualizando condutas. O que quero dizer é que meu atendimento não é o mesmo
+					estilo de vida e individualizando condutas. Meu atendimento não é o mesmo
 					para todos porque cada pessoa me apresenta um caminho único a ser considerado e respeitado.</p>
 
 
@@ -219,7 +219,21 @@
 							fundamental ao seu tratamento.</p>
 					</details>
 				</div>
+				<div class="content">
 
+
+
+
+					<ul class="actions" style="justify-content: center;
+		display: flex;">
+						<li><a target="_self" rel="noopener noreferrer"
+								href="https://wa.me/558597215840?text=Olá, Júlia! Quero agendar minha consulta com você."
+								class="button primary large scrolly">Agendar consulta</a></li>
+
+					</ul>
+
+
+				</div>
 
 
 				<script>// JavaScript
