--- a/index.html
+++ b/index.html
@@ -172,17 +172,17 @@
 				<h2>Sobre mim</h2>
 			</header>
 			<div class="content">
-				<p>Vegana há 8 anos e dedicada ao estudo do <strong> Ayurveda (Terapeuta Ayurveda)</strong>, do
-					<strong>Yoga</strong>, da <strong>Nutrição Clínica
-						Integrativa </strong> (pós graduada) e da <strong>Avaliação Metabólica e Interpretação Avançada
-						de Exames</strong> (aluna do
+				<p>Vegana há 8 anos e dedicada ao estudo do Ayurveda (Terapeuta Ayurveda), do
+					Yoga, da Nutrição Clínica
+					Integrativa (pós graduada) e da Avaliação Metabólica e Interpretação Avançada
+					de Exames (aluna do
 					Dr. Eric Slywitch).
 					Passei a enxergar o mundo através da lente da comida quando me tornei vegetariana, foi um período de
 					transformação de hábitos - não apenas alimentares - na minha vida. A partir da minha vivência, me
 					convenci de que a saúde é um processo de autocura, o que não é possível sem autoconhecimento,
 					autocuidado e autonomia. Na contramão desse ideal, me dei conta de que muitas pessoas estavam
 					experienciando uma relação adoecida com a alimentação e com o próprio corpo, por isso resolvi cursar
-					<strong> Nutrição na Universidade de Fortaleza</strong>, uma das melhores do país, que tem o
+					Nutrição na Universidade de Fortaleza, uma das melhores do país, que tem o
 					Programa Interdisciplinar
 					de Nutrição aos Transtornos Alimentares e Obesidade, no qual atendi pacientes por mais de um ano.
 					Apesar do trabalho com o comportamento alimentar ter sido uma das oportunidades mais enriquecedoras
